2013-12-08 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: version number bumped up to 2.1.4

2013-12-06 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio_Postgres.tcl: minor changes (code indentation revised)
    * rivet/packages/dio/dio_Tdbc.tcl: experimental support for the tdbc
    abstraction library
    * doc/xml/install.xml: the manual still suggested to call make install-packages,
    whereas 'make install' does everything now as it was before 2.1.2

2013-12-04 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/apache_request.c: log message in ApacheRequest___parse()
    commented out (Bug #55845)

2013-12-03 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: Rivet template preprocessor symbols renamed in
    the more expressive RIVET_TEMPLATE and RIVET_TCLFILE
    * rivet/rivet-tcl/lassing_array.tcl: new command lassing_array taken
    from DIO's result set class (inspired by Tclx)
    * doc/xml/commands.xml: lassign_array documented in the manual
    * rivet/packages/dio/dio.tcl: reformatted during analysis for supporting
    tdbc based driver

2013-11-04 Massimo Manghi <mxmanghi@apache.org>
    * src/Makefile.am: this Makefile.am is now in charge for building mod_rivet
    librivet.so and librivetparser.so. This fixes and problem with the 'distclean'
    target and keeps us from further customization of automake (subdir-objects
    property)
    * src/runtests.tcl: changed path to mod_rivet.so and librivetparser.so
 
2013-10-15 Massimo Manghi <mxmanghi@apache.org>
    * src/rivetcmds/rivetCore.c: 'headers redirect' used to return TCL_RETURN
    to force the caller to terminate and interrupt the processing. It didn't 
    actually worked exactly that way and starting with Tcl 8.6.1 it also failed
    returning a Tcl invalid error code (Bug #55583). Turning it into TCL_OK
    seems to cure the problem

2013-09-26 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/session.xml: fixed code example indentation